# SIT315

./: .gitignore  shell.nix
Module1/Seminar1/: Activity2.1.cpp  Activity2.3.cpp  CMakeLists.txt  main.cpp
Module1/Seminar3/: CMakeLists.txt
Module1/Seminar3/src/: Activity3.1.cpp  Activity3.2.cpp
Module1/Task1P/: .gitignore  CMakeLists.txt
Module1/Task1P/src/: main.cpp
Module1/Task2P/: CMakeLists.txt
Module1/Task2P/src/: main.cpp
Module1/Task3/: CMakeLists.txt
Module1/Task3/src/: main.cpp
Module1/Task4/: CMakeLists.txt  platformio.ini
Module1/Task4/src/: main.cpp
Module2/Seminar3/: CMakeLists.txt
Module2/Seminar4/: .gitignore  CMakeLists.txt
Module2/Seminar4/multithreaded/: CMakeLists.txt  VectorAdd.cpp
Module2/Seminar4/original/: CMakeLists.txt  VectorAdd.cpp
Module2/Seminar5/: CMakeLists.txt
Module2/Seminar5/multithreaded/: CMakeLists.txt  VectorAdd.cpp
Module2/Seminar5/omp/: CMakeLists.txt  VectorAdd.cpp
Module2/Seminar5/omp_version/: CMakeLists.txt  VectorAdd.cpp
Module2/Seminar5/original/: CMakeLists.txt  VectorAdd.cpp
Module2/Task1/: .gitignore  CMakeLists.txt
Module2/Task1/combined/: CMakeLists.txt  MatrixMultiply.cpp
Module2/Task1/omp_version/: CMakeLists.txt  MatrixMultiply.cpp
Module2/Task1/sequential/: CMakeLists.txt  MatrixMultiply.cpp
Module2/Task1/std_thread/: CMakeLists.txt  MatrixMultiply.cpp
Module2/Task2/: CMakeLists.txt
Module2/Task2/omp_version/: CMakeLists.txt  QuickSort.cpp
Module2/Task2/parallel_prefix/: CMakeLists.txt  QuickSort.cpp
Module2/Task2/sequential/: CMakeLists.txt  QuickSort.cpp
Module2/Task3/: CMakeLists.txt
Module2/Task3/sequential/: CMakeLists.txt  TrafficConsumer.h  TrafficControl.cpp  TrafficData.h  TrafficFile.h  TrafficProducer.h  config.h  default.nix  types.h
Module3/Seminar6/: default.nix
Module3/Seminar6/hello_mpi/: CMakeLists.txt  hello_mpi.cpp
Module3/Seminar7/Activity1/: default.nix
Module3/Seminar7/Activity1/hello_mpi/: default.nix  hello_mpi.cpp
Module3/Seminar7/Activity2/: default.nix
Module3/Seminar7/Activity2/MpiVectorAdd/: CMakeLists.txt  VectorAdd.cpp  default.nix
Module3/Seminar8/2.1/: opencl_vector_ops.nix  vector_ops.cl  vector_ops.cpp
Module3/Seminar8/2.2/: CMakeLists.txt  opencl_vector_ops.nix  shell.nix  vector_ops.cl  vector_ops.cpp
Module3/Task1/: CMakeLists.txt  default.nix
Module3/Task1/mpi_and_opencl/: CMakeLists.txt  MatrixMultiply.cpp  MatrixMultiplyCl.cpp  MatrixMultiplyCl.h  default.nix  multiply.cl  multiply_cl.h  types.h
Module3/Task1/mpi_and_openmp/: CMakeLists.txt  MatrixMultiply.cpp  default.nix
Module3/Task1/mpi_only/: CMakeLists.txt  MatrixMultiply.cpp  default.nix
Module3/Task1/vms/: mpi_and_opencl.nix  mpi_and_openmp.nix  mpi_only.nix  rebuild
Module3/Task3/: CMakeLists.txt
Module3/Task3/multithreaded/: AtomicStop.h  CMakeLists.txt  TrafficConsumer.h  TrafficControl.cpp  TrafficData.h  TrafficFile.h  TrafficProducer.h  TrafficStore.h  TrafficThread.h  config.h  default.nix  test.txt  types.h
Module3/Task3/sequential/: TrafficControl.cpp  TrafficProducer.h  default.nix
